[gd_scene load_steps=2 format=3 uid="uid://uhh0aajsy8sa"]

[ext_resource type="Script" path="res://controllers/hithurtbox/_box_controller_base.gd" id="1_6av1l"]

[node name="BoxControllerBase" type="Area2D"]
script = ExtResource("1_6av1l")

[node name="HurtboxArea2D" type="CollisionShape2D" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
